--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Essa página trata-se de um clone de temperatura do google">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Temperatura - ZB CLIMA</title>
+
+    <link rel="stylesheet" href="assets/css/global.css">
+    <link rel="stylesheet" href="assets/css/header.css">
 </head>
 <body>
-    <header>
-        <input type="search" name="cidade" id="cidade" placeholder="Digite o nome da cidade" autocomplete="off">
+    <header class="pesquisar">
+        <input type="text" name="cidade" id="cidade" placeholder="Digite o nome da cidade" autocomplete="off">
         <button type="submit">Pesquisar</button>
     </header>
     <section>
