--- a/index.html
+++ b/index.html
@@ -24,8 +24,13 @@
                 <div class="temp">
                     <h1></h1>
                     <sup>
-                        <span class="celsius">ºC</span> |<span class="fahrenheit">ºF</span>
+                        <span class="celsius ativo">ºC</span>|<span class="fahrenheit">ºF</span>
                     </sup>
+                    <div>
+                        <p>Chuva: <span class="chuva"></span></p>
+                        <p>Umidade: <span class="umidade"></span></p>
+                        <p>Vento: <span class="vento"></span></p>
+                    </div>
                 </div>
             </div>
             <div class="city">
@@ -35,7 +40,12 @@
             </div>
         </header>
         <main>
+            <nav>
 
+            </nav>
+            <div>
+                
+            </div>
         </main>
         <footer>
             <div>
