Adicionando https na api

--- a/index.html
+++ b/index.html
@@ -41,10 +41,14 @@
         </header>
         <main>
             <nav>
-
+                <ul>
+                    <li>Temperatura</li>
+                    <li>Chuva</li>
+                    <li>Umidade</li>
+                </ul>
             </nav>
             <div>
-                
+
             </div>
         </main>
         <footer>
