Finalizado a mudança de temas

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
         <main>
             <nav>
                 <ul>
-                    <li class="temp ativo">Temperatura</li>
+                    <li class="temperaturas ativo">Temperatura</li>
                     <span></span>
-                    <li class="chuva">Chuva</li>
+                    <li class="chuvas">Chuva</li>
                     <span></span>
-                    <li class="umidade">Umidade</li>
+                    <li class="umidades">Umidade</li>
                 </ul>
             </nav>
             <div id="chart">
@@ -67,7 +67,7 @@
                     <img alt="tempo" class="tempo1">
                 </figure>
                 <div>
-                    <p class="max"></p>
+                    <p class="day max"></p>
                     <p class="min"></p>
                 </div>
             </div>
@@ -77,7 +77,7 @@
                     <img alt="tempo" class="tempo2">
                 </figure>
                 <div>
-                    <p class="max"></p>
+                    <p class="day max"></p>
                     <p class="min"></p>
                 </div>
             </div>
@@ -87,7 +87,7 @@
                     <img alt="tempo" class="tempo3">
                 </figure>
                 <div>
-                    <p class="max"></p>
+                    <p class="day max"></p>
                     <p class="min"></p>
                 </div>
             </div>
