--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <script src="https://momentjs.com/downloads/moment.js"></script>
+    <script src="assets/js/selecionar.js"></script>
     <script src="assets/js/api.js"></script>
     <script src="assets/js/dark-light.js"></script>
 </body>
